Thu Sep 23 16:14:12 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ace/SSL/ssl.mpc:
        * bin/MakeProjectCreator/config/pkgconfig.mpb:
        * bin/MakeProjectCreator/templates/gnu.mpd:
        * bin/ace_install_pkgconfig.pl:
        * include/makeinclude/rules.lib.GNU:
        * include/makeinclude/wrapper_macros.GNU:

          Added support for installing pkg-config (.pc) files as part of the
          gnuace "make install".  This includes a refactoring of how the
          shared library version numbers are set internally in the makefiles.

Thu Sep 23 12:32:05 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/Service_Gestalt.cpp:
          Fixed memory leak. Previously it could happen that svc_queue_ was
          allocated during processing of arguments but was not freed if
          application didn't call process_commandline_directives().

        * tests/Network_Adapters_Test.cpp:
          Removed non-ASCII character from the comments.

Wed Sep 22 18:42:25 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/msvc_mpc_auto_compile.pl:

          Updates for DAnCE.

Wed Sep 22 14:17:11 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * debian/Basic_Logging_Service.sgml:
        * debian/Event_Logging_Service.sgml:
        * debian/Notify_Logging_Service.sgml:
        * debian/RTEvent_Logging_Service.sgml:
          Renamed TAO orb services. See $TAO_ROOT/NEWS for details.

Wed Sep 22 14:06:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * debian/libtao-orbsvcs-1.8.2.install:
        * debian/libtao-orbsvcs-dev.install:
        * debian/tao-imr.install:
        * debian/tao-naming.install:
        * debian/tao-notify.install:
        * debian/tao-rtevent.install:
          Renamed TAO orb services. See $TAO_ROOT/NEWS for details.

Wed Sep 22 13:58:46 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * debian/tao-concurrency.install:
        * debian/tao-event.install:
        * debian/tao-ft.install: